<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="350sp"
        android:layout_marginEnd="160dp"
        android:backgroundTint="#337093"
        android:onClick="btnGoHome"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textStyle="bold"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#F44336"
        android:clickable="false"
        android:ems="10"
        android:fontFamily="monospace"
        android:foregroundTint="#009688"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="80dp"
        android:autofillHints=""
        android:backgroundTint="#F44336"
        android:clickable="false"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220sp"
        android:layout_marginTop="420sp"
        android:fontFamily="monospace"
        android:minHeight="48dp"
        android:onClick="btnGoSignUp"
        android:text="Sign Up"
        android:textColor="#DD2C00"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="40sp"
        android:fontFamily="serif-monospace"
        android:text="LOG IN"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#337093"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>